--- a/custom-contextMenu-angular/src/app/app.component.html
+++ b/custom-contextMenu-angular/src/app/app.component.html
@@ -11,7 +11,7 @@
 </ul>
 
 <h4>Example:</h4>
-<div (contextmenu)="showContextMenu()">
+<div (contextmenu)="showContextMenu()" (click)="show = false">
   Right-click me to show context menu!
 </div>
 
